# Lab4-PADT

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md
include/: dynamic_array.h  generator.h  lazy_sequence.h  linked_list.h  ordinal.h  ordinal.tpp
include/lazy/: cache.h  generators.h  lazy_sequence.h
include/lazy/detail/: cache.tpp  generators.tpp  lazy_sequence.tpp
include/lazy/generators/: append.h  base.h  concat.h  insert_item.h  insert_sequence.h  interleave.h  map.h  prepend.h  rule.h  sequence.h  take.h  where.h
include/lazy/generators/detail/: append.tpp  base.tpp  concat.tpp  insert_item.tpp  insert_sequence.tpp  interleave.tpp  map.tpp  prepend.tpp  rule.tpp  sequence.tpp  take.tpp  where.tpp
include/streams/: base_streams.h  file.h  file_streams.h  lazy.h  lazy_streams.h  live_file_streams.h  sequence.h  sequence_streams.h  stream.h
include/streams/detail/: base_streams.tpp  file_streams.tpp  lazy_streams.tpp  live_file_streams.tpp  sequence_streams.tpp
include/tasks/: event_statistics.h
include/tasks/detail/: event_statistics.tpp
src/: main.cpp  menu.cpp  ordinal.cpp  utils.cpp
tests/lab4/: event_statistics_tests.cpp  generator_tests.cpp  lazy_sequence_tests.cpp  ordinal_tests.cpp  stream_tests.cpp
